--- a/src/componets/Result.css
+++ b/src/componets/Result.css
@@ -1,9 +1,9 @@
-.Result{
+.result{
     height: 100vh;
     display: grid;
     place-items: center;
 }
-.Result__box{
+.result__box{
     padding: 10px;
     text-align: center;
     background-color: green;
